--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Esteem
 Theme URI: https://themegrill.com/themes/esteem/
 Author: ThemeGrill
 Author URI: https://themegrill.com
-Description: Esteem is a clean multipurpose responsive WordPress theme designed to fit business, portfolio, blogging or any type of site. The theme supports custom header, custom background, custom widgets, page templates and has built in options panel to configure primary color, site logo, slider, sidebar layout and 3 blog layout. It's also fully compatible with popular plugins like contact Form 7, WP PageNavi and Breadcrumb Navxt and is translation ready. Get free support at https://themegrill.com/support-forum/ and check the demo at https://demo.themegrill.com/esteem/.
+Description: Esteem is a clean multipurpose responsive WordPress theme designed to fit business, portfolio, blogging or any type of site. The theme supports custom header, custom background, custom widgets, page templates and has built in options panel to configure primary color, site logo, slider, sidebar layout and 3 blog layout. It's also fully compatible with popular plugins like contact Form 7, WP PageNavi and Breadcrumb Navxt and is translation ready. Get free support at https://themegrill.com/contact/ and check the demo at https://themegrilldemos.com/esteem/.
 Version: 1.4.9
 Tested up to: 5.4
 Requires PHP: 5.6
