--- a/style.css
+++ b/style.css
@@ -993,9 +993,10 @@ h3#site-title {
 	padding-top: 22px;
 	float: right;
 	clear: none;
+    margin-right: 35px;
 }
 
-.main-navigation ul li {
+.main-navigation ul li:not(:last-child) {
 	padding-right: 25px;
 	font-size: 14px;
 }
@@ -1832,11 +1833,12 @@ h3#site-title {
 }
 
 .search-top {
+    font-size: 22px;
 	position: absolute;
 	right: 0;
-	top: 29px;
+	top: 28px;
 	cursor: pointer;
-	padding: 10px;
+	padding: 8px;
 }
 
 .search-form-top {
