--- a/style.css
+++ b/style.css
@@ -990,15 +990,18 @@ h3#site-title {
 }
 
 .main-navigation {
-	padding-top: 22px;
+    padding-top: 22px;
+    margin-right: 30px;
 	float: right;
 	clear: none;
-    margin-right: 35px;
+}
+
+.main-navigation ul li {
+	font-size: 14px;
 }
 
 .main-navigation ul li:not(:last-child) {
 	padding-right: 25px;
-	font-size: 14px;
 }
 
 .nav-menu > ul > li > a, .menu > ul > li > a {
@@ -1833,10 +1836,10 @@ h3#site-title {
 }
 
 .search-top {
-    font-size: 22px;
+    font-size: 16px;
 	position: absolute;
 	right: 0;
-	top: 28px;
+	top: 30px;
 	cursor: pointer;
 	padding: 8px;
 }
